--- a/express/package.json
+++ b/express/package.json
@@ -13,6 +13,7 @@
     "url": "cgsgES1A.github.io"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.2"
   }
